--- a/fluid_collision_sim/index.html
+++ b/fluid_collision_sim/index.html
@@ -107,12 +107,14 @@
 
       uniform vec2 gridRes;
       uniform sampler2D inputTexture;
+      uniform vec3 bias;
+      uniform vec3 scale;
 
       void main() {
         vec2 pixel = gl_FragCoord.xy / gridRes;
-        vec3 bias = vec3(0.5, 0.5, 0.5);
-        vec3 scale = vec3(0.5, 0.5, 0.5);
-        gl_FragColor = vec4(bias + scale * texture2D(inputTexture, pixel).xyz, 1.0);
+        //vec3 bias2 = vec3(0.5, 0.5, 0.5);
+        //vec3 scale2 = vec3(0.5, 0.5, 0.5);
+        gl_FragColor = vec4(bias.xyz + scale.xyz * texture2D(inputTexture, pixel).xyz, 1.0);
         //gl_FragColor = vec4(texture2D(inputTexture, pixel).xyz, 1.0);
       }
     </script>
