--- a/fluid_collision_sim/index.html
+++ b/fluid_collision_sim/index.html
@@ -81,7 +81,7 @@
           float scale = 1.0 / gridScale;
 
           // trace point back in time
-          vec2 p = gl_FragCoord.xy - timestep * scale * texture2D(velocity, uv).xy;
+          vec2 p = gl_FragCoord.xy - timestep * scale * 10.0 * texture2D(velocity, uv).xy;
 
           gl_FragColor = vec4(dissipation * bilerp(advected, p), 0.0, 1.0);
       }
