--- a/fluid_collision_sim/index.html
+++ b/fluid_collision_sim/index.html
@@ -28,8 +28,8 @@
       void main() {
         vec2 pixel  = gl_FragCoord.xy / gridRes.xy;
 
-        if (px < 0.01) {
-          gl_FragColor = vec4(0.4, 0.0, 0.0, 1.0);
+        if (int(pixel.y) % 10 == 0) {
+          gl_FragColor = vec4(0.03, 0.0, 0.0, 1.0);
         }
       }
     </script>
