--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     font-family:'Courier New', Courier, monospace;
   }
 </style>
-<title>CS 184: Final Project Milestone Report</title>
+<title>Fluids Collision Simulator</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
 </head>
