--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   c1 {
     font-family:'Courier New', Courier, monospace;
   }
+  m1 {
+    font-family:'Times New Roman', Times, serif;
+    font-size: 18px;
+  }
 </style>
 <title>Fluid Collision Simulator</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -98,7 +102,7 @@
 </p>
 <br>
 
-<h3 align="middle">Framework</h3>
+<h3 align="middle"> Project Framework</h3>
 <p>
 	Our simulator is built in Javascript using Three.js, which allows us to utilize WebGL 
 	to perform calculations and draw 3D (but we only use 2D) graphics to the screen. 
@@ -109,20 +113,22 @@
 	and switch them after each update. Within our main simulation loop, we 
 	repeatedly pass these <c1>AttributeField</c1> buffer textures' buffers to the respective calculation shaders 
 	and have them perform one of the calculations required to complete one timestep update, then draw the results to the screen. 
-	<br>
+</p>
+<p>
 	We also implemented shaders to handle the movement of randomly placed particles, which 
 	are advected (at least visually) through the fluid by forward integration using the velocity
 	vector field (We use a basic euler step to achieve this). Finally, we implemented user interactivity 
 	by tracking the position of the mouse and whether it is pressed or not, and adding external forces or 
 	boundary cells to the area that the mouse drags over. 
-	<br>
+</p>
+<p>
 	The settings menu was created with dat.gui as a lightweight and low complexity user 
 	interface that allowed us to focus more development on the actual simulator. 
 </p>
 <br>
 
 <h3 align="middle">Shaders</h3>
-<h4>Advection</h4>
+<h4 align="middle">Advection</h4>
 <p>
 	Advection is the process of a fluid transporting itself. For our 2D grid of 
 	attributes, we represent this as updating a grid cell to a new velocity given 
@@ -134,7 +140,9 @@
 	t is the timestep (which we fix to 1.0 for our implementation).
 
 </p>
-<h4>Divergence</h4>
+<br>
+
+<h4 align="middle">Divergence</h4>
 <p>
 	Divergence measures the change in velocity across a surface surrounding a 
 	small area of fluid. We then update the velocity field according to the 
@@ -144,7 +152,9 @@
 	where u and v are parameters of the velocity field u = (u, v).
 
 </p>
-<h4>Jacobi Iteration</h4>
+<br>
+
+<h4 align="middle">Jacobi Iteration</h4>
 <p>
 	Jacobi iteration is an iterative technique that converges towards a solution for a 
 	system of linear equations. We use it here to solve poisson equations, which include 
@@ -152,7 +162,9 @@
 	$$x_{i, j}^{k+1} = \frac{x_{i-1, j}^k + x_{i+1, j}^k + x_{i, j-1}^k + x_{i, j+1}^k + \alpha b_{i, j}}{\beta}$$
 	where x is the field (pressure or velocity), b is the divergence, alpha and beta are constants.
 </p>
-<h4>Gradient Subtraction</h4>
+<br>
+
+<h4 align="middle">Gradient Subtraction</h4>
 <p>
 	To ensure that we have an incompressible fluid (which means divergence is 0 by Navier Stokes), we subtract 
 	the pressure gradient from the velocity field.
@@ -161,7 +173,9 @@
 	and gradient subtraction gives us the pressure term in the Navier Stokes equation, which describes 
 	projection of the fluid from high pressure to low pressure areas.
 </p>
-<h4>External Forces</h4>
+<br>
+
+<h4 align="middle">External Forces</h4>
 <p>
 	When the user clicks their mouse and drags, we generate a force that is added to the velocity 
 	field in the direction of the drag. This follows the following formula:
@@ -172,10 +186,59 @@
 	We see that the large fraction is simply distance over radius, so that the cells closest to 
 	the mouse have the greatest increase.
 </p>
-<h4>Boundary</h4>
+<br>
+
+<h4 align="middle">Boundaries</h4>
 <p>
-	Boundary text goes here. 
+	In order to implement boundaries, we needed to enforce no-slip velocity boundary conditions and pure 
+	Neumann pressure boundary conditions after modifying the <c1>velocityField</c1> and <c1>pressureField</c1>. 
+	Within the other shader programs it is assumed that every grid cell lies within the fluid domain. The
+	boundary shader programs adjust the velocities and pressure values acquired through the simulation process 
+	to take into account the existence of grid cells that lie in the boundary domain.
 </p>
+<p>
+	No-slip velocity boundary conditions are applied differently depending on the type of boundary cell we are dealing
+	with. The first type is a boundary cell that borders only one fluid cell. 
+</p>
+<p>
+	For example, in the case of a boundary cell <c1>B_W</c1> located at cell (i,j) with a fluid cell to its left in 
+	cell (i-1,j), we set the velocity of the boundary cell to the negated velocity of its fluid cell neighbor, 
+	following this constraint equation:
+</p>
+<p>
+	$$\frac{u_{i-1 , j} - u_{i , j}}{2}$$
+</p>
+<p>
+	To enforce pure Neumann pressure boundary conditions, we set the pressure value of a boundary cell to the pressure 
+	value of its fluid cell neighbor, following this constraint equation:
+</p>
+<p>
+	$$\frac{p_{i-1 , j} - p_{i , j}}{\delta x}$$
+</p>
+<p>
+	In the case where a boundary cell borders multiple fluid cells, we simply set the boundary velocity to the negated 
+	average of all its neighboring fluid cell velocities. For a boundary cell <c1>B_NE</c1> with neigboring fluid cells in its 
+	north and east directions, the boundary velocity <i><m1>u<sub>i,j</sub></m1></i> is computed as such:
+</p>
+<p>
+	$$u_{i, j} = -\frac{u_{i, j+1} + u_{i+1, j}}{2} $$
+</p>
+<p>
+	Pressure values are calculated in the same way, except the average value is not negated
+</p>
+
+<div align="middle">
+	<table style="width:100%">
+		<tr align="center">
+		<td>
+			<img src="images/stream.gif" align="middle" width="550px"/>
+			<figcaption>Fluid interaction with downstream obstacles.</figcaption>
+		</td>
+		</tr>
+	</table>
+</div>
+<br>
+
 <h4>ParticleSim</h4>
 <p>
 	Particle simulation text goes here. 
