Add high_res images of simulation

--- a/index.html
+++ b/index.html
@@ -50,7 +50,19 @@
     <table style="width:100%">
         <tr align="center">
             <td>
-                <!-- <img style='border:1px solid #000000' src="images/TODO.gif" align="middle" width="500px"/> -->
+                <img style='border:1px solid #000000' src="images/1024x512_fluid_drag.png" align="middle" width="500px"/>
+            </td>
+			<td>
+                <img style='border:1px solid #000000' src="images/1024x512_fluid_channel.png" align="middle" width="482px"/>
+            </td>
+        </tr>
+    </table>
+</div>
+<div align="middle">
+    <table style="width:100%">
+        <tr align="center">
+            <td>
+                <img style='border:1px solid #000000' src="images/1024x512_stream_barriers.png" align="middle" width="500px"/>
             </td>
         </tr>
     </table>
